--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@
 !*.aliases
 !*.gitconfig
 !*.gitignore
-!*.iterm2
+!*.iterm2/
 !*.nanorc
 !*.p10k.zsh
 !*.ssh/config
 !*.vimrc
-!*.vim
+!*.vim/
 !*.zshrc
